--- a/watch-01.html
+++ b/watch-01.html
@@ -89,6 +89,10 @@
         body, center, table, a{
           background: #2d2d2d!important;
           color: #ffffff!important;
+          
+        }
+      .container {
+         box-shadow: 0 0 10px rgba(0, 0, 0, .2)!important;
         }
         .hdr,
         .ftr {
@@ -220,7 +224,7 @@
                       <td align="center" >
                         <p class="ft-txt" style="font-size: 10px; line-height: 16px; margin: 0; color: #ffffff; padding-bottom: 10px;">You are receiving this email because you are subscribed to the Bethany Heart email list.</p>
                         <p class="ft-txt" style="font-size: 10px; line-height: 16px; margin: 0; color: #ffffff; padding-bottom: 10px;">To unsubscribe <a href="https://example.com" class="ftr" style="color: #ffffff;">click here</a>.</p>
-                        <p class="ft-txt" style="font-size: 10px; line-height: 16px; color: #ffffff; margin: 0;padding-bottom: 10px;">                          B-Heart Books, LLC, 1234 Main Street, New York, NY, 12345</p>
+                        <p class="ft-txt" style="font-size: 10px; line-height: 16px; color: #ffffff; margin: 0;padding-bottom: 10px;"> B-Heart Books, LLC, 1234 Main Street, New York, NY, 12345</p>
                       </td>
                     </tr>
                   </table>
