--- a/watch-01.html
+++ b/watch-01.html
@@ -26,6 +26,9 @@
         -ms-text-size-adjust: 100%;
         -margin: 0 !important;
       }
+      .container {
+        box-shadow: 0 0 10px rgba(0, 0, 0, .2);
+      }
       p {
         font-size: 16px;
         line-height: 20px;
@@ -92,7 +95,7 @@
           
         }
       .container {
-         box-shadow: 0 0 10px rgba(0, 0, 0, .2)!important;
+         box-shadow: 0 0 0px rgba(0, 0, 0, .2)!important;
         }
         .hdr,
         .ftr {
@@ -137,8 +140,7 @@
                 <table class="hdr" cellspacing="0" cellpadding="0" border="0" align="center" width="100%" style="padding:40px 20px; width: 100%; background-color: #A48111;" role="presentation"> 
                   <tr>
                     <td align="center">
-                      <h1 style="font-size: 28px; line-height: 32px; color: #ffffff;" >LuxWatch.com</h1>
-                      <h3 style="font-size:20px;line-height:24px; color: #ffffff;margin:0;">Premium Watches for Men and Women</h3>
+                       <a href="https://www.example.com"><img src="https://i.ibb.co/QJVX8f6/logo-lw.png" alt="Lux Timepieces logo" border="0" width="100%" style="border-width:0; max-width: 180px; height: auto; display: block;"></a>
                     </td>
                   </tr>                  
                 </table>                
